0026360: Useless global functions IsSimilar() in Standard

Remove IsSimilar() global function for Standard types. Replace usege of IsSimilar() by IsEqual().