src/Standard/Standard_Character.hxx
@@ -36,13 +36,6 @@ inline Standard_Boolean IsEqual(const Standard_Character One,
 				const Standard_Character Two)
 { return One == Two; }
 
-// ------------------------------------------------------------------
-// IsSimilar : Returns Standard_True if two characters have the same value
-// ------------------------------------------------------------------
-inline Standard_Boolean IsSimilar(const Standard_Character One, 
-				  const Standard_Character Two)
-{ return One == Two; }
-
 // ===============================================
 // Character classification functions
 //
